# RealtimeSysRover

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: config.yml
GUI/: CMakeLists.txt  GUI_comm.cpp  GUI_communication.cpp  GUI_communication.hpp  GUI_helpers.hpp  exampleServer.py  index.html  test_GUI.cpp  test_GUI.hpp  web_server_GUI.py
GUI/scripts/: joy.js  scripts.js
GUI/static/scripts/: joy.js  scripts.js
GUI/static/styles/: styles.css
GUI/styles/: styles.css
GUI/templates/: index.html
UDP/: CMakeLists.txt  udp_client.py  udp_client_json.py  udp_client_json_dummy.py  udp_client_proto.py  udp_client_proto_dummy.py  udp_server.cpp
application/: CMakeLists.txt  automated_driving.cpp  main.cpp  manual_control_with_camera.cpp
examples/: CMakeLists.txt  automated_control.cpp  automated_driving.cpp  automated_driving_command.cpp  manual_control.cpp  object_detection_threading.cpp  picamera_server.cpp  picamera_server_udp.cpp  video_viewer_example.cpp
examples/executables/: automated_driving.cpp  automated_driving_command.cpp  manual_control.cpp  manual_control_with_camera.cpp  object_detection_threading.cpp  picamera_server.cpp  picamera_server_udp.cpp  video_viewer_example.cpp
examples/udp/: udp_client_json_dummy.py  udp_client_proto_dummy.py  udp_client_proto_webcam.py
gui/: web_server_GUI.py
gui/static/scripts/: scripts.js
gui/static/styles/: styles.css
gui/templates/: index.html
include/: GUI_helpers.hpp  gui_helper.hpp  json_helper.hpp  network_helper.hpp  person.hpp  proto_helper.hpp  read_file_helper.hpp  rover_communication.hpp  utils.hpp
include/autonomous_driving/: autonomous_driving.hpp
include/helpers/: detection_helper.hpp  gui_helper.hpp  gui_helper_V2.hpp  network_helper.hpp  read_file_helper.hpp
include/message_handling/: command_handler.hpp  message_handler.hpp  video_feed_handler.hpp
include/object_detection/: object_detection.hpp
include/safe_queue/: safe_queue.hpp
include/tcp_server/: _tcp_server.hpp  basic_tcp_server.hpp  tcp_server.hpp  tcp_server_lib.hpp  websocket_tcp_server.hpp  ws_server_lib.hpp  ws_tcp_server.hpp
include/udp_server/: udp_server.hpp  video_feed_handler.hpp
include/video_viewer/: video_viewer.hpp
protobuf/: CMakeLists.txt  Person_pb2.py  my_messages.proto  my_messages_pb2.py  person.proto
resources/protobuf/: CMakeLists.txt
rover/: setup.sh
scripts/: ssh2rover.bat
src/: CMakeLists.txt  _tcp_server.cpp  autonomous_driving.cpp  command_handler.cpp  json_helper.hpp  object_detection.cpp  person.hpp  proto_helper.hpp  rover_communication.cpp  tcp_server.cpp  tcp_server_lib.cpp  test_tcp_NO_CATCH.cpp  udp_server_lib.cpp  video_feed_handler.cpp  video_viewer.cpp  websocket_tcp_server.cpp  ws_server_lib.cpp
src/realtime_sys_rover/autonomous_driving/: autonomous_driving.cpp
src/realtime_sys_rover/object_detection/: object_detection.cpp
src/realtime_sys_rover/tcp_server/: tcp_server_lib.cpp  ws_server_lib.cpp
src/realtime_sys_rover/udp_server/: udp_server_lib.cpp
src/realtime_sys_rover/video_viewer/: video_viewer.cpp
tests/: CMakeLists.txt  TestProject.cpp  testSerialization.cpp  test_GUI_helpers.cpp  test_TCP_no_catch2.cpp  test_gui_helper.cpp  test_project.cpp  test_serialization.cpp  test_tcp_NO_CATCH.cpp  test_utils.cpp  testproject.cpp
tests/test_headers/: CMakeLists.txt  test_autonomous_driving.cpp
tests/test_helpers/: CMakeLists.txt  test_gui_helper.cpp
udp/: udp_client_json_dummy.py  udp_client_proto_webcam.py
